No content hidden behind the fixed-positioned navbar (#3238)

--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,10 @@ html {
   font-family: sans-serif;
 }
 
+body {
+  margin-top: 50px;
+}
+
 a {
   color: black;
 }
